# Termorio

./: Cargo.toml  build.rs
crates/builder/: Cargo.toml
crates/common/: Cargo.toml
crates/common/src/: constants.rs  errors.rs  lib.rs  utils.rs
crates/common/src/ipc/: mod.rs  types.rs  utils.rs
crates/factory/: Cargo.toml
crates/factory/src/: main.rs
crates/factory/src/orchestrator_connection/: types.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: display.rs  lib.rs  main.rs  types.rs
