[workspace]
members = ["crates/builder",
    "crates/common",
    "crates/factory",
    "crates/orchestrator",
]
resolver = "2"  # Use the new dependency resolver

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
interprocess = { version = "2.2.2", features = ["tokio"] }
bytes = { version = "1", features = ["serde"] }
bincode = { version = "1.3.3" }
uuid = { version = "1.12.0", features = ["v4", "serde"] }
dashmap = { version = "6.1.0", features = ["serde"] }

# Other common dependencies...

[profile.release]
lto = "thin"      # Enable link-time optimization
codegen-units = 1  # Optimize for size
